Update README.md
docs(geuntae): JDK 17 사용이유 및 장점 추가